cmake_minimum_required(VERSION 3.13)

include(pico_sdk_import.cmake)

project(fourdisplays C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()

add_executable(fourdisplays
	main.c
)

pico_enable_stdio_usb(fourdisplays 1)
pico_enable_stdio_uart(fourdisplays 1)

pico_add_extra_outputs(fourdisplays)

target_link_libraries(fourdisplays pico_stdlib)
